# roptimizer

./: Cargo.toml  README.md
data/: df_exec_time.json  df_opt_exec_time.json  df_res.json  stats.json
src/: catalog.rs  lib.rs  main.rs
src/join_order/: catalog.rs  cost_estimator.rs  dp.rs  mod.rs  optimizer.rs  query_graph.rs
